pkgs/dartcv_core/src/core.h

CvStatus *RotatedRect_BoundingRect(RotatedRect rect, Rect *rval);
CvStatus *Mat_toVecPoint(Mat self, VecPoint *vec);
CvStatus *Mat_toVecPoint2f(Mat self, VecPoint2f *vec);
CvStatus *Mat_toVecPoint3f(Mat self, VecPoint3f *vec);
CvStatus *Mat_toVecPoint3i(Mat self, VecPoint3i *vec);
CvStatus *Mat_toString(
    Mat self,
    int fmtType,
    int f16Precision,
    int f32Precision,
    int f64Precision,
    bool multiLine,
    char **rval
);
int Mat_Type(Mat m);
MatStep Mat_Step(Mat m);
int Mat_Total(Mat m);
VecI32 *Mat_Size(Mat m);
CvStatus *Mat_ToVecUChar(Mat m, VecUChar *rval);
CvStatus *Mat_ToVecChar(Mat m, VecChar *rval);
CvStatus *Mat_Sqrt(Mat m, Mat *rval);
CvStatus *Ones(int rows, int cols, int type, Mat *rval);
CvStatus *Mat_SetVec6i(Mat m, int row, int col, Vec6i val);
CvStatus *Mat_SetVec8i(Mat m, int row, int col, Vec8i val);
CvStatus *Mat_SetVec6f(Mat m, int row, int col, Vec6f val);
CvStatus *Mat_SubtractMat(Mat m, Mat val);
CvStatus *Mat_SubtractUChar(Mat m, uint8_t val);
CvStatus *Mat_SubtractSChar(Mat m, int8_t val);
CvStatus *Mat_SubtractI16(Mat m, int16_t val);
CvStatus *Mat_SubtractU16(Mat m, uint16_t val);
CvStatus *Mat_SubtractI32(Mat m, int32_t val);
CvStatus *Mat_SubtractFloat(Mat m, float_t val);
CvStatus *Mat_SubtractF64(Mat m, double_t val);
CvStatus *Mat_Vconcat(Mat src1, Mat src2, Mat dst);
CvStatus *Mat_Solve(Mat src1, Mat src2, Mat dst, int flags, bool *rval);
CvStatus *Mat_SolveCubic(Mat coeffs, Mat roots, int *rval);
CvStatus *Mat_SolvePoly(Mat coeffs, Mat roots, int maxIters, double *rval);
CvStatus *Mat_Sort(Mat src, Mat dst, int flags);
CvStatus *Mat_SortIdx(Mat src, Mat dst, int flags);
CvStatus *Mat_Split(Mat src, VecMat *rval);
CvStatus *Mat_Subtract(Mat src1, Mat src2, Mat dst, Mat mask, int dtype);
CvStatus *Mat_T(Mat x, Mat *rval);
CvStatus *Mat_Trace(Mat src, Scalar *rval);
CvStatus *Mat_Transform(Mat src, Mat dst, Mat tm);
CvStatus *Mat_Transpose(Mat src, Mat dst);
CvStatus *Mat_Sum(Mat src, Scalar *rval);
CvStatus *Mat_rowRange(Mat m, int start, int end, Mat *rval);
CvStatus *Mat_colRange(Mat m, int start, int end, Mat *rval);
CvStatus *Rotate(Mat src, Mat dst, int rotateCode);
CvStatus *Norm(Mat src1, int normType, Mat mask, double *rval);
CvStatus *NormWithMats(Mat src1, Mat src2, int normType, Mat mask, double *rval);
CvStatus *Rng_New(RNG *rval);
CvStatus *Rng_NewWithState(uint64_t state, RNG *rval);
void Rng_Close(RNGPtr rng);
CvStatus *RNG_Fill(RNG rng, Mat mat, int distType, double a, double b, bool saturateRange);
CvStatus *RNG_Gaussian(RNG rng, double sigma, double *rval);
CvStatus *RNG_Uniform(RNG rng, int a, int b, int *rval);
CvStatus *RNG_UniformDouble(RNG rng, double a, double b, double *rval);
CvStatus *RNG_Next(RNG rng, uint32_t *rval);
CvStatus *RandN(Mat mat, Scalar mean, Scalar stddev);
CvStatus *RandShuffle(Mat mat);
CvStatus *RandShuffleWithParams(Mat mat, double iterFactor, RNG rng);
CvStatus *RandU(Mat mat, Scalar low, Scalar high);