lib/src/g/core.g.dart


@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec6f)>()
external ffi.Pointer<CvStatus> Mat_SetVec6f(
  Mat m,
  int row,
  int col,
  Vec6f val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec6i)>()
external ffi.Pointer<CvStatus> Mat_SetVec6i(
  Mat m,
  int row,
  int col,
  Vec6i val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec8i)>()
external ffi.Pointer<CvStatus> Mat_SetVec8i(
  Mat m,
  int row,
  int col,
  Vec8i val,
);

@ffi.Native<ffi.Pointer<VecI32> Function(Mat)>(isLeaf: true)
external ffi.Pointer<VecI32> Mat_Size(
  Mat m,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, Mat, ffi.Int, ffi.Pointer<ffi.Bool>)>()
external ffi.Pointer<CvStatus> Mat_Solve(
  Mat src1,
  Mat src2,
  Mat dst,
  int flags,
  ffi.Pointer<ffi.Bool> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Pointer<ffi.Int>)>()
external ffi.Pointer<CvStatus> Mat_SolveCubic(
  Mat coeffs,
  Mat roots,
  ffi.Pointer<ffi.Int> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, ffi.Int, ffi.Pointer<ffi.Double>)>()
external ffi.Pointer<CvStatus> Mat_SolvePoly(
  Mat coeffs,
  Mat roots,
  int maxIters,
  ffi.Pointer<ffi.Double> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_Sort(
  Mat src,
  Mat dst,
  int flags,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_SortIdx(
  Mat src,
  Mat dst,
  int flags,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecMat>)>()
external ffi.Pointer<CvStatus> Mat_Split(
  Mat src,
  ffi.Pointer<VecMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_Sqrt(
  Mat m,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<MatStep Function(Mat)>(isLeaf: true)
external MatStep Mat_Step(
  Mat m,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_Subtract(
  Mat src1,
  Mat src2,
  Mat dst,
  Mat mask,
  int dtype,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, double_t)>()
external ffi.Pointer<CvStatus> Mat_SubtractF64(
  Mat m,
  double val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, float_t)>()
external ffi.Pointer<CvStatus> Mat_SubtractFloat(
  Mat m,
  double val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int16)>()
external ffi.Pointer<CvStatus> Mat_SubtractI16(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int32)>()
external ffi.Pointer<CvStatus> Mat_SubtractI32(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_SubtractMat(
  Mat m,
  Mat val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int8)>()
external ffi.Pointer<CvStatus> Mat_SubtractSChar(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint16)>()
external ffi.Pointer<CvStatus> Mat_SubtractU16(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint8)>()
external ffi.Pointer<CvStatus> Mat_SubtractUChar(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<Scalar>)>()
external ffi.Pointer<CvStatus> Mat_Sum(
  Mat src,
  ffi.Pointer<Scalar> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_T(
  Mat x,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecChar>)>()
external ffi.Pointer<CvStatus> Mat_ToVecChar(
  Mat m,
  ffi.Pointer<VecChar> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_ToVecChar_Async(
  Mat self,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecUChar>)>()
external ffi.Pointer<CvStatus> Mat_ToVecUChar(
  Mat m,
  ffi.Pointer<VecUChar> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_ToVecUChar_Async(
  Mat self,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Int Function(Mat)>(isLeaf: true)
external int Mat_Total(
  Mat m,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<Scalar>)>()
external ffi.Pointer<CvStatus> Mat_Trace(
  Mat src,
  ffi.Pointer<Scalar> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_Transform(
  Mat src,
  Mat dst,
  Mat tm,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_Transpose(
  Mat src,
  Mat dst,
);

@ffi.Native<ffi.Int Function(Mat)>(isLeaf: true)
external int Mat_Type(
  Mat m,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_Vconcat(
  Mat src1,
  Mat src2,
  Mat dst,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Int, ffi.Int, ffi.Int, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_Zeros_Async(
  int rows,
  int cols,
  int type,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_colRange(
  Mat m,
  int start,
  int end,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_rowRange(
  Mat m,
  int start,
  int end,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Int,
        ffi.Bool, ffi.Pointer<ffi.Pointer<ffi.Char>>)>()
external ffi.Pointer<CvStatus> Mat_toString(
  Mat self,
  int fmtType,
  int f16Precision,
  int f32Precision,
  int f64Precision,
  bool multiLine,
  ffi.Pointer<ffi.Pointer<ffi.Char>> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecPoint>)>()
external ffi.Pointer<CvStatus> Mat_toVecPoint(
  Mat self,
  ffi.Pointer<VecPoint> vec,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecPoint2f>)>()
external ffi.Pointer<CvStatus> Mat_toVecPoint2f(
  Mat self,
  ffi.Pointer<VecPoint2f> vec,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecPoint3f>)>()
external ffi.Pointer<CvStatus> Mat_toVecPoint3f(
  Mat self,
  ffi.Pointer<VecPoint3f> vec,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecPoint3i>)>()
external ffi.Pointer<CvStatus> Mat_toVecPoint3i(
  Mat self,
  ffi.Pointer<VecPoint3i> vec,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, Mat, ffi.Pointer<ffi.Double>)>()
external ffi.Pointer<CvStatus> Norm(
  Mat src1,
  int normType,
  Mat mask,
  ffi.Pointer<ffi.Double> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, ffi.Int, Mat, ffi.Pointer<ffi.Double>)>()
external ffi.Pointer<CvStatus> NormWithMats(
  Mat src1,
  Mat src2,
  int normType,
  Mat mask,
  ffi.Pointer<ffi.Double> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Ones(
  int rows,
  int cols,
  int type,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        RNG, Mat, ffi.Int, ffi.Double, ffi.Double, ffi.Bool)>()
external ffi.Pointer<CvStatus> RNG_Fill(
  RNG rng,
  Mat mat,
  int distType,
  double a,
  double b,
  bool saturateRange,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(RNG, Mat, ffi.Int, ffi.Double, ffi.Double,
        ffi.Bool, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> RNG_Fill_Async(
  RNG rng,
  Mat mat,
  int distType,
  double a,
  double b,
  bool saturateRange,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(RNG, ffi.Double, ffi.Pointer<ffi.Double>)>()
external ffi.Pointer<CvStatus> RNG_Gaussian(
  RNG rng,
  double sigma,
  ffi.Pointer<ffi.Double> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(RNG, ffi.Double, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> RNG_Gaussian_Async(
  RNG rng,
  double sigma,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(RNG, ffi.Pointer<ffi.Uint32>)>()
external ffi.Pointer<CvStatus> RNG_Next(
  RNG rng,
  ffi.Pointer<ffi.Uint32> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(RNG, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> RNG_Next_Async(
  RNG rng,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        RNG, ffi.Int, ffi.Int, ffi.Pointer<ffi.Int>)>()
external ffi.Pointer<CvStatus> RNG_Uniform(
  RNG rng,
  int a,
  int b,
  ffi.Pointer<ffi.Int> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        RNG, ffi.Double, ffi.Double, ffi.Pointer<ffi.Double>)>()
external ffi.Pointer<CvStatus> RNG_UniformDouble(
  RNG rng,
  double a,
  double b,
  ffi.Pointer<ffi.Double> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        RNG, ffi.Double, ffi.Double, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> RNG_UniformDouble_Async(
  RNG rng,
  double a,
  double b,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(RNG, ffi.Int, ffi.Int, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> RNG_Uniform_Async(
  RNG rng,
  int a,
  int b,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Scalar, Scalar)>()
external ffi.Pointer<CvStatus> RandN(
  Mat mat,
  Scalar mean,
  Scalar stddev,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Scalar, Scalar, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> RandN_Async(
  Mat mat,
  Scalar mean,
  Scalar stddev,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat)>()
external ffi.Pointer<CvStatus> RandShuffle(
  Mat mat,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Double, RNG)>()
external ffi.Pointer<CvStatus> RandShuffleWithParams(
  Mat mat,
  double iterFactor,
  RNG rng,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Double, RNG, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> RandShuffleWithParams_Async(
  Mat mat,
  double iterFactor,
  RNG rng,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> RandShuffle_Async(
  Mat mat,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Scalar, Scalar)>()
external ffi.Pointer<CvStatus> RandU(
  Mat mat,
  Scalar low,
  Scalar high,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Scalar, Scalar, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> RandU_Async(
  Mat mat,
  Scalar low,
  Scalar high,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Void Function(imp1.RNGPtr)>()
external void Rng_Close(
  imp1.RNGPtr rng,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<RNG>)>()
external ffi.Pointer<CvStatus> Rng_New(
  ffi.Pointer<RNG> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Uint64, ffi.Pointer<RNG>)>()
external ffi.Pointer<CvStatus> Rng_NewWithState(
  int state,
  ffi.Pointer<RNG> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Uint64, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Rng_NewWithState_Async(
  int state,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Rng_New_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>()
external ffi.Pointer<CvStatus> Rotate(
  Mat src,
  Mat dst,
  int rotateCode,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(RotatedRect, ffi.Pointer<Rect>)>()
external ffi.Pointer<CvStatus> RotatedRect_BoundingRect(
  RotatedRect rect,
  ffi.Pointer<Rect> rval,
);
